Aggregate latest node: put zero for COUNT/COUNT_UNIQUE when all children are filtered out