@@ -32,9 +32,7 @@ package org.thingsboard.rule.engine.analytics.latest.telemetry;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
-import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -42,14 +40,14 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.provider.Arguments;
 import org.mockito.ArgumentCaptor;
-import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.stubbing.Answer;
-import org.thingsboard.common.util.AbstractListeningExecutor;
 import org.thingsboard.common.util.JacksonUtil;
+import org.thingsboard.common.util.ListeningExecutor;
 import org.thingsboard.rule.engine.AbstractRuleNodeUpgradeTest;
+import org.thingsboard.rule.engine.TestDbCallbackExecutor;
 import org.thingsboard.rule.engine.analytics.incoming.MathFunction;
 import org.thingsboard.rule.engine.api.ScriptEngine;
 import org.thingsboard.rule.engine.api.TbContext;
@@ -59,14 +57,17 @@ import org.thingsboard.rule.engine.api.TbNodeException;
 import org.thingsboard.rule.engine.api.TbPeContext;
 import org.thingsboard.server.common.data.AttributeScope;
 import org.thingsboard.server.common.data.DataConstants;
+import org.thingsboard.server.common.data.Device;
 import org.thingsboard.server.common.data.id.AssetId;
 import org.thingsboard.server.common.data.id.DeviceId;
 import org.thingsboard.server.common.data.id.EntityId;
 import org.thingsboard.server.common.data.id.TenantId;
+import org.thingsboard.server.common.data.kv.BaseAttributeKvEntry;
 import org.thingsboard.server.common.data.kv.BasicTsKvEntry;
+import org.thingsboard.server.common.data.kv.BooleanDataEntry;
 import org.thingsboard.server.common.data.kv.DoubleDataEntry;
+import org.thingsboard.server.common.data.kv.KvEntry;
 import org.thingsboard.server.common.data.kv.StringDataEntry;
-import org.thingsboard.server.common.data.kv.TsKvEntry;
 import org.thingsboard.server.common.data.msg.TbMsgType;
 import org.thingsboard.server.common.data.msg.TbNodeConnectionType;
 import org.thingsboard.server.common.data.relation.EntityRelation;
@@ -79,24 +80,28 @@ import org.thingsboard.server.dao.attributes.AttributesService;
 import org.thingsboard.server.dao.relation.RelationService;
 import org.thingsboard.server.dao.timeseries.TimeseriesService;
 
+import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static com.google.common.util.concurrent.Futures.immediateFuture;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyCollection;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
+import static org.mockito.ArgumentMatchers.nullable;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.spy;
@@ -104,40 +109,33 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-@Slf4j
-public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest {
+class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest {
 
-    public static final String FILTER_FUNCTION = "return Number(attributes['temperature']) > 42;";
+    static final String FILTER_FUNCTION = "return Number(attributes['temperature']) > 42;";
+
     @Mock
-    private TbContext ctx;
+    TbContext ctx;
     @Mock
-    private TbPeContext peCtx;
+    TbPeContext peCtx;
     @Mock
-    private RelationService relationService;
+    RelationService relationService;
     @Mock
-    private TimeseriesService timeseriesService;
+    TimeseriesService timeseriesService;
     @Mock
-    private AttributesService attributesService;
+    AttributesService attributesService;
     @Mock
-    private ScriptEngine scriptEngine;
-    private AbstractListeningExecutor executor;
-    private TbAggLatestTelemetryNodeV2 node;
-    private TenantId tenantId;
-    private AssetId assetId;
+    ScriptEngine scriptEngine;
+
+    ListeningExecutor executor = new TestDbCallbackExecutor();
+    TbAggLatestTelemetryNodeV2 node;
+    TenantId tenantId;
+    AssetId assetId;
 
     @BeforeEach
-    public void before() {
-        tenantId = new TenantId(UUID.randomUUID());
+    void before() {
+        tenantId = TenantId.fromUUID(UUID.randomUUID());
         assetId = new AssetId(UUID.randomUUID());
         node = spy(new TbAggLatestTelemetryNodeV2());
-
-        executor = new AbstractListeningExecutor() {
-            @Override
-            protected int getThreadPollSize() {
-                return 1;
-            }
-        };
-        executor.init();
 
         lenient().when(ctx.getTenantId()).thenReturn(tenantId);
         lenient().when(ctx.getPeContext()).thenReturn(peCtx);
@@ -146,16 +144,15 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
         lenient().when(ctx.getTimeseriesService()).thenReturn(timeseriesService);
         lenient().when(ctx.getAttributesService()).thenReturn(attributesService);
 
-        initMock();
+        initMocks();
     }
 
     @AfterEach
-    public void after() {
-        executor.destroy();
+    void after() {
         node.destroy();
     }
 
-    private TbAggLatestTelemetryNodeV2Configuration getConfigNode() {
+    TbAggLatestTelemetryNodeV2Configuration getConfigNode() {
         TbAggLatestTelemetryNodeV2Configuration config = new TbAggLatestTelemetryNodeV2Configuration();
 
         List<AggLatestMapping> aggMappings = new ArrayList<>();
@@ -185,27 +182,27 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
         return config;
     }
 
-    private void initMock() {
-        DeviceId deviceA = new DeviceId(UUID.randomUUID());
-        DeviceId deviceB = new DeviceId(UUID.randomUUID());
-        EntityRelation relationA = new EntityRelation(assetId, deviceA, EntityRelation.CONTAINS_TYPE);
-        EntityRelation relationB = new EntityRelation(assetId, deviceB, EntityRelation.CONTAINS_TYPE);
+    void initMocks() {
+        var deviceA = new DeviceId(UUID.randomUUID());
+        var deviceB = new DeviceId(UUID.randomUUID());
 
-        TsKvEntry deviceATemperature = new BasicTsKvEntry(System.currentTimeMillis(), new DoubleDataEntry("temperature", 42.0));
-        TsKvEntry deviceBTemperature = new BasicTsKvEntry(System.currentTimeMillis(), new DoubleDataEntry("temperature", 44.0));
+        var relationA = new EntityRelation(assetId, deviceA, EntityRelation.CONTAINS_TYPE);
+        var relationB = new EntityRelation(assetId, deviceB, EntityRelation.CONTAINS_TYPE);
+
+        var deviceATemperature = new BasicTsKvEntry(System.currentTimeMillis(), new DoubleDataEntry("temperature", 42.0));
+        var deviceBTemperature = new BasicTsKvEntry(System.currentTimeMillis(), new DoubleDataEntry("temperature", 44.0));
 
         lenient().when(relationService.findByFromAndTypeAsync(tenantId, assetId, EntityRelation.CONTAINS_TYPE, RelationTypeGroup.COMMON))
-                .thenReturn(Futures.immediateFuture(Arrays.asList(relationA, relationB)));
-        lenient().when(timeseriesService.findLatest(tenantId, deviceA, new HashSet<>(Arrays.asList("temperature"))))
-                .thenReturn(Futures.immediateFuture(Arrays.asList(deviceATemperature)));
-        lenient().when(timeseriesService.findLatest(tenantId, deviceB, new HashSet<>(Arrays.asList("temperature"))))
-                .thenReturn(Futures.immediateFuture(Arrays.asList(deviceBTemperature)));
+                .thenReturn(immediateFuture(List.of(relationA, relationB)));
+
+        lenient().when(timeseriesService.findLatest(tenantId, deviceA, Set.of("temperature"))).thenReturn(immediateFuture(List.of(deviceATemperature)));
+        lenient().when(timeseriesService.findLatest(tenantId, deviceB, Set.of("temperature"))).thenReturn(immediateFuture(List.of(deviceBTemperature)));
     }
 
-    private void checkMsg(TbMsg Msg, boolean checkSum) {
-        Assertions.assertNotNull(Msg);
-        Assertions.assertNotNull(Msg.getData());
-        ObjectNode objectNode = (ObjectNode) JacksonUtil.toJsonNode(Msg.getData());
+    void checkMsg(TbMsg msg, boolean checkSum) {
+        Assertions.assertNotNull(msg);
+        Assertions.assertNotNull(msg.getData());
+        ObjectNode objectNode = (ObjectNode) JacksonUtil.toJsonNode(msg.getData());
         Assertions.assertEquals(43.0, objectNode.get("latestAvgTemperature").asDouble(), 0.0);
         Assertions.assertEquals(2, objectNode.get("deviceCount").asInt());
 
@@ -217,7 +214,7 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
     }
 
     @Test
-    public void testSimpleAggregationWithoutFilter() throws TbNodeException, ExecutionException, InterruptedException {
+    void testSimpleAggregationWithoutFilter() throws TbNodeException {
         node.init(ctx, new TbNodeConfiguration(JacksonUtil.valueToTree(getConfigNode())));
 
         TbMsg msg = TbMsg.newMsg()
@@ -235,8 +232,7 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
     }
 
     @Test
-    public void testSimpleAggregationWithFilter() throws TbNodeException, ExecutionException, InterruptedException {
-
+    void testSimpleAggregationWithFilter() throws TbNodeException {
         TbAggLatestTelemetryNodeV2Configuration config = getConfigNode();
         List<AggLatestMapping> aggMappings = config.getAggMappings();
 
@@ -258,18 +254,18 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
 
         //Mock for filter
         when(peCtx.createAttributesScriptEngine(ScriptLanguage.TBEL, FILTER_FUNCTION)).thenReturn(scriptEngine);
-        when(scriptEngine.executeAttributesFilterAsync(ArgumentMatchers.anyMap())).then(
+        when(scriptEngine.executeAttributesFilterAsync(anyMap())).then(
                 (Answer<ListenableFuture<Boolean>>) invocation -> {
                     Map<String, BasicTsKvEntry> attributes = (Map<String, BasicTsKvEntry>) (invocation.getArguments())[0];
                     if (attributes.containsKey("temperature")) {
                         try {
                             double temperature = attributes.get("temperature").getDoubleValue().get();
-                            return Futures.immediateFuture(temperature > 42);
+                            return immediateFuture(temperature > 42);
                         } catch (NumberFormatException e) {
-                            return Futures.immediateFuture(false);
+                            return immediateFuture(false);
                         }
                     }
-                    return Futures.immediateFuture(false);
+                    return immediateFuture(false);
                 }
         );
 
@@ -290,7 +286,7 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
     }
 
     @Test
-    public void testSimpleAggregationWithDeduplication() throws TbNodeException, ExecutionException, InterruptedException {
+    void testSimpleAggregationWithDeduplication() throws TbNodeException {
         int countMsg = 5;
         long deduplicationInSec = 60;
         TbAggLatestTelemetryNodeV2Configuration config = getConfigNode();
@@ -316,8 +312,8 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
                     .copyMetaData(metaData)
                     .data(data)
                     .build();
-        }).when(ctx).newMsg(ArgumentMatchers.isNull(), eq(TbMsgType.TB_AGG_LATEST_SELF_MSG), ArgumentMatchers.nullable(EntityId.class),
-                any(), ArgumentMatchers.any(TbMsgMetaData.class), anyString());
+        }).when(ctx).newMsg(isNull(), eq(TbMsgType.TB_AGG_LATEST_SELF_MSG), nullable(EntityId.class),
+                any(), any(TbMsgMetaData.class), anyString());
 
         doAnswer((Answer<Void>) invocation -> {
             TbMsg msg = (TbMsg) (invocation.getArguments())[0];
@@ -364,10 +360,10 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
     }
 
     @Test
-    public void testAggregationWithNoTargetTelemetry() throws Exception {
+    void testAggregationWithNoTargetTelemetry() throws Exception {
         BasicTsKvEntry emptyKvEntry = new BasicTsKvEntry(System.currentTimeMillis(), new StringDataEntry("temperature", null));
         when(timeseriesService.findLatest(eq(tenantId), any(), eq(Set.of("temperature"))))
-                .thenReturn(Futures.immediateFuture(List.of(emptyKvEntry)));
+                .thenReturn(immediateFuture(List.of(emptyKvEntry)));
 
         TbNodeConfiguration config = new TbNodeConfiguration(JacksonUtil.valueToTree(getConfigNode()));
         node.init(ctx, config);
@@ -388,7 +384,7 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
     }
 
     @Test
-    public void testAggregationWithNoTargetAttributes() throws Exception {
+    void testAggregationWithNoTargetAttributes() throws Exception {
         TbAggLatestTelemetryNodeV2Configuration config = new TbAggLatestTelemetryNodeV2Configuration();
         AggLatestMapping avgAttrMapping = new AggLatestMapping();
         avgAttrMapping.setSource("attr");
@@ -402,7 +398,7 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
         config.setOutMsgType(TbMsgType.POST_TELEMETRY_REQUEST.name());
 
         when(attributesService.find(eq(tenantId), any(), eq(AttributeScope.SERVER_SCOPE), anyCollection()))
-                .thenReturn(Futures.immediateFuture(Collections.emptyList()));
+                .thenReturn(immediateFuture(Collections.emptyList()));
 
         node.init(ctx, new TbNodeConfiguration(JacksonUtil.valueToTree(config)));
 
@@ -421,12 +417,165 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
         assertThat(data.get("avgAttr").asDouble()).isEqualTo(0.0);
     }
 
+    @Test
+    void testCountAggregation_resultIsZeroWhenAllChildrenFilteredOut() throws Exception {
+        // GIVEN
+        var config = new TbAggLatestTelemetryNodeV2Configuration();
+
+        config.setDirection(EntitySearchDirection.FROM);
+        config.setRelationType(EntityRelation.CONTAINS_TYPE);
+        config.setDeduplicationInSec(Duration.ofMinutes(10L).toSeconds());
+        config.setOutMsgType(TbMsgType.POST_TELEMETRY_REQUEST.name());
+
+        List<AggLatestMapping> mappings = new ArrayList<>();
+
+        var filter = new AggLatestMappingFilter();
+        filter.setClientAttributeNames(Collections.emptyList());
+        filter.setSharedAttributeNames(Collections.emptyList());
+        filter.setServerAttributeNames(List.of("occupied"));
+        filter.setLatestTsKeyNames(Collections.emptyList());
+        filter.setScriptLang(ScriptLanguage.TBEL);
+        filter.setTbelFilterFunction("return attributes['occupied'] == 'false';");
+
+        var countMapping = new AggLatestMapping();
+        countMapping.setSource("occupied");
+        countMapping.setSourceScope("SERVER_SCOPE");
+        countMapping.setDefaultValue(0);
+        countMapping.setAggFunction(MathFunction.COUNT);
+        countMapping.setTarget("freeParkingLots");
+        countMapping.setFilter(filter);
+        mappings.add(countMapping);
+
+        config.setAggMappings(mappings);
+
+        var device = new Device(new DeviceId(UUID.randomUUID()));
+
+        given(relationService.findByFromAndTypeAsync(tenantId, assetId, EntityRelation.CONTAINS_TYPE, RelationTypeGroup.COMMON)).willReturn(
+                immediateFuture(List.of(new EntityRelation(assetId, device.getId(), EntityRelation.CONTAINS_TYPE)))
+        );
+
+        given(attributesService.find(tenantId, device.getId(), AttributeScope.SERVER_SCOPE, Set.of("occupied"))).willReturn(
+                immediateFuture(List.of(new BaseAttributeKvEntry(123L, new BooleanDataEntry("occupied", true))))
+        );
+
+        given(peCtx.createAttributesScriptEngine(ScriptLanguage.TBEL, filter.getTbelFilterFunction())).willReturn(scriptEngine);
+        given(scriptEngine.executeAttributesFilterAsync(anyMap())).willAnswer(invocation -> {
+            @SuppressWarnings("unchecked")
+            Map<String, KvEntry> keyValues = (Map<String, KvEntry>) (invocation.getArguments())[0];
+            return immediateFuture(keyValues.get("occupied").getValueAsString().equals("false"));
+        });
+
+        node.init(ctx, new TbNodeConfiguration(JacksonUtil.valueToTree(config)));
+
+        // WHEN
+        var msg = TbMsg.newMsg()
+                .type(TbMsgType.POST_TELEMETRY_REQUEST)
+                .originator(assetId)
+                .data(TbMsg.EMPTY_JSON_OBJECT)
+                .metaData(TbMsgMetaData.EMPTY)
+                .build();
+
+        node.onMsg(ctx, msg);
+
+        // THEN
+        var out = ArgumentCaptor.forClass(TbMsg.class);
+
+        then(ctx).should().enqueueForTellNext(out.capture(), eq(TbNodeConnectionType.SUCCESS));
+
+        var actualData = (ObjectNode) JacksonUtil.toJsonNode(out.getValue().getData());
+        assertThat(actualData.hasNonNull("freeParkingLots")).as("should have count result in the outgoing message").isTrue();
+        assertThat(actualData.get("freeParkingLots").intValue()).isZero();
+    }
+
+    @Test
+    void testCountUniqueAggregation_resultIsZeroWhenAllChildrenFilteredOut() throws Exception {
+        // GIVEN
+        var config = new TbAggLatestTelemetryNodeV2Configuration();
+
+        config.setDirection(EntitySearchDirection.FROM);
+        config.setRelationType(EntityRelation.CONTAINS_TYPE);
+        config.setDeduplicationInSec(Duration.ofMinutes(10L).toSeconds());
+        config.setOutMsgType(TbMsgType.POST_TELEMETRY_REQUEST.name());
+
+        List<AggLatestMapping> mappings = new ArrayList<>();
+
+        var filter = new AggLatestMappingFilter();
+        filter.setClientAttributeNames(Collections.emptyList());
+        filter.setSharedAttributeNames(Collections.emptyList());
+        filter.setServerAttributeNames(List.of("occupied"));
+        filter.setLatestTsKeyNames(Collections.emptyList());
+        filter.setScriptLang(ScriptLanguage.TBEL);
+        filter.setTbelFilterFunction("return attributes['occupied'] == 'true';");
+
+        var countMapping = new AggLatestMapping();
+        countMapping.setSource("plateNumber");
+        countMapping.setSourceScope("SERVER_SCOPE");
+        countMapping.setDefaultValue(0);
+        countMapping.setAggFunction(MathFunction.COUNT_UNIQUE);
+        countMapping.setTarget("uniqueVehiclesPresent");
+        countMapping.setFilter(filter);
+        mappings.add(countMapping);
+
+        config.setAggMappings(mappings);
+
+        var device1 = new Device(new DeviceId(UUID.randomUUID()));
+        var device2 = new Device(new DeviceId(UUID.randomUUID()));
+
+        given(relationService.findByFromAndTypeAsync(tenantId, assetId, EntityRelation.CONTAINS_TYPE, RelationTypeGroup.COMMON)).willReturn(
+                immediateFuture(List.of(
+                        new EntityRelation(assetId, device1.getId(), EntityRelation.CONTAINS_TYPE),
+                        new EntityRelation(assetId, device2.getId(), EntityRelation.CONTAINS_TYPE))
+                )
+        );
+
+        given(attributesService.find(tenantId, device1.getId(), AttributeScope.SERVER_SCOPE, Set.of("occupied", "plateNumber"))).willReturn(
+                immediateFuture(List.of(
+                        new BaseAttributeKvEntry(123L, new BooleanDataEntry("occupied", false)),
+                        new BaseAttributeKvEntry(123L, new StringDataEntry("plateNumber", "ABC123"))
+                ))
+        );
+        given(attributesService.find(tenantId, device2.getId(), AttributeScope.SERVER_SCOPE, Set.of("occupied", "plateNumber"))).willReturn(
+                immediateFuture(List.of(
+                        new BaseAttributeKvEntry(123L, new BooleanDataEntry("occupied", false)),
+                        new BaseAttributeKvEntry(123L, new StringDataEntry("plateNumber", "ABC123"))
+                ))
+        );
+
+        given(peCtx.createAttributesScriptEngine(ScriptLanguage.TBEL, filter.getTbelFilterFunction())).willReturn(scriptEngine);
+        given(scriptEngine.executeAttributesFilterAsync(anyMap())).willAnswer(invocation -> {
+            @SuppressWarnings("unchecked")
+            Map<String, KvEntry> keyValues = (Map<String, KvEntry>) (invocation.getArguments())[0];
+            return immediateFuture(keyValues.get("occupied").getValueAsString().equals("true"));
+        });
+
+        node.init(ctx, new TbNodeConfiguration(JacksonUtil.valueToTree(config)));
+
+        // WHEN
+        var msg = TbMsg.newMsg()
+                .type(TbMsgType.POST_TELEMETRY_REQUEST)
+                .originator(assetId)
+                .data(TbMsg.EMPTY_JSON_OBJECT)
+                .metaData(TbMsgMetaData.EMPTY)
+                .build();
+
+        node.onMsg(ctx, msg);
+
+        // THEN
+        var out = ArgumentCaptor.forClass(TbMsg.class);
+
+        then(ctx).should().enqueueForTellNext(out.capture(), eq(TbNodeConnectionType.SUCCESS));
+
+        var actualData = (ObjectNode) JacksonUtil.toJsonNode(out.getValue().getData());
+        assertThat(actualData.hasNonNull("uniqueVehiclesPresent")).as("should have count unique result in the outgoing message").isTrue();
+        assertThat(actualData.get("uniqueVehiclesPresent").intValue()).isZero();
+    }
+
     // Rule nodes upgrade
-    public static final String EXPECTED_CONFIG = "{\"outMsgType\":null,\"direction\":\"FROM\",\"relationType\":null,\"deduplicationInSec\":10," +
+    static final String EXPECTED_CONFIG = "{\"outMsgType\":null,\"direction\":\"FROM\",\"relationType\":null,\"deduplicationInSec\":10," +
             "\"aggMappings\":[{\"source\":\"temperature\",\"sourceScope\":\"LATEST_TELEMETRY\",\"defaultValue\":0.0," +
             "\"target\":\"latestAvgTemperature\",\"aggFunction\":\"AVG\",\"filter\":null}]}";
 
-    private static Stream<Arguments> givenFromVersionAndConfig_whenUpgrade_thenVerifyHasChangesAndConfig() {
+    static Stream<Arguments> givenFromVersionAndConfig_whenUpgrade_thenVerifyHasChangesAndConfig() {
         return Stream.of(
                 // default config for version 0
                 Arguments.of(0,
@@ -451,4 +600,5 @@ public class TbAggLatestTelemetryNodeV2Test extends AbstractRuleNodeUpgradeTest 
     protected TbNode getTestNode() {
         return node;
     }
+
 }
